Fixed bug with alignment

--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,10 @@
 body {
 	width: 100%;
 	height: 100%;
-	background: url(../img/background.jpg) center no-repeat;
-	background-size: cover;
 }
 
 /*==================   WRAPPER   ==================*/
 .wrapper {
-	position: relative;
-	overflow: auto;
 	width: 100%;
 	height: 100%;
 }
@@ -96,22 +92,27 @@ body {
 }
 
 
-
 /*==================   CONTENT   ==================*/
 .main-section {
 	position: relative;
-	overflow: auto;
 	width: 100%;
 	height: 100%;
 }
 
+.image {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
 
 /*==================   FORM   ==================*/
-.conteiner-registration {
-	padding: 2.24% 28.13%;
-}
 .registration {
+	position: absolute;
+	overflow: visible;
+	margin: auto;
+	top: 0; left: 0; bottom: 0; right: 0;
 	width: 560px;
+	height: 606px;
 }
 .form-header {
 	margin-bottom: 2px;
@@ -122,7 +123,6 @@ body {
 	text-align: center;
 }
 .conteiner-form {
-	padding-bottom: 20px;
 	background: rgba(0, 0, 0, 0.5);
 }
 
@@ -141,7 +141,7 @@ body {
 	box-shadow: 0px 0px 9px 3px rgba(83, 147, 208, 0.8);
 }
 .conteiner-form p {
-	margin: 0 130px;
+	padding: 0px 130px 20px 130px;
 	color: #cccccc;
 	font-size: 11px;
 	text-align: center;
